# transperth-bus-times

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: API_DOCUMENTATION.md  API_REFERENCE.md
src/: bus_times.py
src/transperth_bus_times/: __init__.py
tests/: __init__.py  conftest.py  test_all_directions.py  test_all_services.py  test_api_contract.py  test_compare_results.py  test_direction.py  test_direction_difference.py  test_fixed_service.py  test_get_stop_codes.py  test_minimal_params.py  test_new_services.py  test_trip_details.py  test_trip_minimal.py
