[project]
name = "transperth-bus-times"
version = "2.0.0"
description = "Home Assistant PyScript integration for Transperth bus times"
readme = "README.md"
requires-python = ">=3.9"

# This project isn't installed as a package — the single source file is copied
# into PyScript. The test suite is the only reason Python tooling is configured.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"